--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -24,9 +24,14 @@
     </div><!--//meta-->
 
     {% if experience.details %}
-    <div class="details">
-      {{ experience.details | markdownify }}
-    </div><!--//details-->
+    <div class="iconClass" style="display: table;"> 
+      <img src="../assets/images/patwaririshab.png" style='width: auto; height: auto;'> 
+      <div class="details" style="display: flex;">
+          {{ experience.details | markdownify }}
+        </div><!--//details-->
+    
+    </div>
+   
     {% endif %}
 
   </div><!--//item-->
