--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -73,5 +73,10 @@
     </li>
     {% endif %}
 
+    <li class="downloadablelink"> 
+      <i class="fas fa-download"></i>
+      <a href="document.URL/../../resume/Rishab_Patwari_Resume.pdf" target="_blank">Download Resume</a>
+    </li>
+
   </ul>
 </div><!--//contact-container-->
