--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -24,9 +24,8 @@
     </div><!--//meta-->
 
     {% if experience.details %}
-    <div class="iconClass" style="display: table;"> 
-      <img src="../assets/images/patwaririshab.png" style='width: auto; height: auto;'> 
-      <div class="details" style="display: flex;">
+    <div class="iconClass"> 
+      <div class="details">
           {{ experience.details | markdownify }}
         </div><!--//details-->
     
